# i2a

./: Readme.md
.github/workflows/: auto-release.yml
emissary/emissary-cli/src/: error.rs
i2a/: Cargo.toml
i2a/src/: main.rs
scripts/: install.sh
