[package]
name = "i2a"
version = "0.1.0"
edition = "2021"
description = "I2P to API Bridge: Seamlessly expose hidden services as local endpoints."

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream", "socks"] }
warp = "0.3"
bytes = "1"
futures-util = "0.3"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
emissary-cli = { path = "../emissary/emissary-cli", default-features = false, features = ["web-ui"] }